# Zixiao-Server-OS-Native

./: .gdbinit-arm64  .gdbinit-x86_64  .gitignore  CLAUDE.md  CLION_FINAL_SETUP.md  CLION_FIX.md  CLION_QUICKSTART.md  CLION_READY.md  CLION_SETUP.md  CMakeLists.txt  INSTALL.md  Makefile  Makefile.native  PROJECT_OVERVIEW.md  QUICKSTART_MACOS.md  README.md  TODO.md  build.sh  quickstart.sh  run-arm64.sh  run-docker.sh  run-x86_64.sh  toolchain-arm64.cmake
src/arch/arm64/: kernel_main.c  linker.ld  panic.c
src/arch/arm64/boot/: boot.S
src/arch/arm64/drivers/: uart.c
src/arch/arm64/interrupts/: exceptions.c  gic.c  timer.c
src/arch/arm64/mm/: mmu.c
src/arch/arm64/scheduler/: context_switch.S
src/arch/x86_64/: kernel_main.c  linker.ld  panic.c
src/arch/x86_64/boot/: boot.S
src/arch/x86_64/drivers/: keyboard.c  vga.c
src/arch/x86_64/interrupts/: gdt.c  gdt_flush.S  idt.c  interrupts.S  timer.c
src/arch/x86_64/mm/: mmu.c
src/arch/x86_64/scheduler/: context_switch.S
src/include/arch/: arm64_gic.h  arm64_mmu.h  arm64_timer.h  interrupts.h  x86_64_mmu.h  x86_64_timer.h
src/include/kernel/: console.h  initrd.h  mm.h  panic.h  sched.h  string.h  types.h  vfs.h
src/kernel/: panic.c
src/kernel/fs/: initrd.c  vfs.c
src/kernel/lib/: printf.c  string.c
src/kernel/mm/: kmalloc.c  pmm.c
src/kernel/scheduler/: idle.c  sched.c  task.c  test_tasks.c
